Fix orthographic camera coordinate mapping for hdpi screens

Fixes: QTBUG-98342
Change-Id: I427906ae9ee25f1c7840fa67a6a807980bbddb10
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
(cherry picked from commit b6f82b4422157ff5101144fd9286ab6070123275)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>